--- a/debian/rules
+++ b/debian/rules
@@ -4,7 +4,6 @@ include /usr/share/pkg-kde-tools/qt-kde-team/2/debian-qt-kde.mk
 
 override_dh_auto_install:
 	dh_auto_install -Skf5 --parallel
-	rm -rf /workspace/build/debian/tmp/usr/lib/x86_64-linux-gnu/libkbookmarkmodel_private.so
 
 override_dh_compress:
 	dh_compress '-X.dcl' '-X.docbook' '-X-license' '-X.tag' '-X.sty' '-X.el'
@@ -15,4 +14,4 @@ override_dh_auto_test:
 	:
 
 override_dh_strip:
-	$(overridden_command) --dbgsym-migration='kde-baseapps-dbg (<= 4:15.12.1-1~~)'
+	$(overridden_command) --dbgsym-migration='kfind-dbg (<= 4:15.12.1-1~~)'
