--- a/debian/control
+++ b/debian/control
@@ -11,6 +11,7 @@ Uploaders: Sune Vuorela <sune@debian.org>,
 Build-Depends: cmake (>= 2.8.9~),
                debhelper (>= 9),
                extra-cmake-modules (>= 1.7.0),
+               libgphoto2-dev,
                libkf5archive-dev (>= 5.19.0),
                libkf5doctools-dev (>= 5.19.0),
                libkf5kdelibs4support-dev (>= 5.19.0),
