--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Uploaders: Sune Vuorela <sune@debian.org>,
            Modestas Vainius <modax@debian.org>,
            George Kiagiadakis <kiagiadakis.george@gmail.com>,
            Eshat Cakar <info@eshat.de>,
-           Maximiliano Curia <maxy@debian.org>
+           Maximiliano Curia <maxy@debian.org>,
 Build-Depends: cmake (>= 2.8.9~),
                debhelper (>= 9),
                extra-cmake-modules (>= 1.7.0),
@@ -15,7 +15,7 @@ Build-Depends: cmake (>= 2.8.9~),
                libkf5doctools-dev (>= 5.19.0),
                libkf5kdelibs4support-dev (>= 5.19.0),
                pkg-kde-tools (>= 0.12),
-               qtbase5-dev (>= 5.4)
+               qtbase5-dev (>= 5.4),
 Standards-Version: 4.1.0
 Homepage: http://www.kde.org/
 Vcs-Browser: https://anonscm.debian.org/git/pkg-kde/applications/kfind.git
