--- a/debian/control
+++ b/debian/control
@@ -8,14 +8,15 @@ Uploaders: Sune Vuorela <sune@debian.org>,
            George Kiagiadakis <kiagiadakis.george@gmail.com>,
            Eshat Cakar <info@eshat.de>,
            Maximiliano Curia <maxy@debian.org>,
-Build-Depends: cmake (>= 2.8.9~),
+Build-Depends: cmake (>= 2.8.12~),
                debhelper (>= 9),
-               extra-cmake-modules (>= 1.7.0),
+               extra-cmake-modules (>= 5.28.0~),
                libkf5archive-dev (>= 5.19.0),
                libkf5doctools-dev (>= 5.19.0),
                libkf5kdelibs4support-dev (>= 5.19.0),
+               libkf5widgetsaddons-dev,
                pkg-kde-tools (>= 0.12),
-               qtbase5-dev (>= 5.4),
+               qtbase5-dev (>= 5.6.0~),
 Standards-Version: 4.1.0
 Homepage: http://www.kde.org/
 Vcs-Browser: https://anonscm.debian.org/git/pkg-kde/applications/kfind.git
